--- a/package.json
+++ b/package.json
@@ -6,36 +6,36 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js",
     "test": "jest",
-    "lint": "eslint ./src/**/*.ts"
+    "lint": "eslint src/**"
   },
   "engines": {
-    "node": ">=12.10.0",
-    "npm": ">=6.10.3"
+    "node": "16.16.0",
+    "npm": "8.11.0"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^25.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.1.0",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@types/jest": "^28.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.0.0",
+    "babel-jest": "^28.1.2",
+    "babel-loader": "^8.2.5",
     "babel-preset-env": "^1.7.0",
-    "canvas": "^2.6.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "eslint": "^6.8.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^26.0.1",
+    "canvas": "^2.9.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "eslint": "^8.19.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "pre-commit": "^1.2.2",
-    "script-ext-html-webpack-plugin": "^2.1.4",
-    "ts-jest": "^26.1.0",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "ts-jest": "^28.0.5",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.3.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "pre-commit": [
     "lint",
